overview/css/parallel-lineGraph.css
svg {
  font: 10px sans-serif;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.brush .extent {
  stroke: #fff;
  fill-opacity: .125;
  shape-rendering: crispEdges;
}

.line {
  stroke: black;
  fill: none;
  clip-path: url(#clip);
}

.checkboxes {
  display : none;
}

